@@ -1,0 +1,3 @@
+module Devil
+    VERSION = "0.1.9.1"
+end
